# inchworm_ros

./: .gitmodules
inchworm_algo/: CMakeLists.txt
inchworm_algo/data/: 10x10_pattern0.csv  10x10_pattern1.csv  10x12_pattern0.csv  10x12_pattern1.csv  16x16_pattern0.csv  20x20_pattern0.csv  25x25_pattern0.csv  25x25_pattern1.csv  (+6 more)
inchworm_control/: CMakeLists.txt  package.xml
inchworm_description/: package.xml
inchworm_description/config/: inchworm_control.yaml  inchworm_frames.rviz  joint_names_inchworm_description.yaml  joints.xml
inchworm_description/launch/: gazebo.launch  gazebo_and_rviz.launch  moveit.launch
inchworm_description/magnets/: magnets.urdf.xacro
inchworm_description/media/: Demo_Shingle.STL  beam_bottom.stl
inchworm_description/meshes/: beam_top.stl  ee.stl
inchworm_description/rviz/: inchworm_frames.rviz
inchworm_description/scripts/: generate_sdfs.py  iw_tf_republisher.py  load_control_params.py  load_controller_spawners.py  load_robot_urdf.py  load_state_publishers.py  log_joints.py  magnet_state_observer.py
inchworm_description/sdf/: all_models.sdf  double_shingle.sdf  inchworm_description.sdf  inchworm_magnets.sdf  roof.sdf  shingle.sdf  shingle_description.sdf
inchworm_description/urdf/: inchworm_description.sdf  inchworm_description.urdf  inchworm_magnets.sdf  magnet_sim.sdf  magnets.urdf.xacro  shingle.urdf  shingle_description.urdf  shingles.urdf  updated_description.urdf
inchworm_env/: CMakeLists.txt  package.xml
inchworm_hw_interface/: CMakeLists.txt  package.xml
inchworm_moveit/: .setup_assistant  package.xml
(+94 files in other folders)
